Se termina Hoja De Vida

--- a/index.html
+++ b/index.html
@@ -14,29 +14,28 @@
 </head>
 
 <body>
+    <main>
     <div class="name">
-        <div>class="<img>
+        <div id:''>
+            <img>
             <img src="foto.san.jpg" alt="">
-
-
         </div>
         <div class="content">
-            <p class="p-1">santiago Bedoya Amaya</p>
+            <p class="p-1">Santiago Bedoya Amaya</p>
             <p class="p-2"> 23 años</p>
-            <p class="p-3"> estudiante de tecnologia en desarrollo de software,etapa productiva</p>
+            <p class="p-3"> Estudiante de tecnologia en desarrollo de software,etapa productiva</p>
 
         </div>
     </div>
     <div class="info">
         <p class=" tituloSeccion"> Descripcíon</p>
-        <p class="tituloInfo"> conoceme!! </p>
-        <p class="infoinfo">mi nombre es Santiagovivo en Copacabana con mis padres me considero una persona resiliente,
-            con muchos valores como la puntualidad,el compañerismo, me gusta muchos escuchar a las personas aunque
-            aveces no me escucho a mi mismo;
-            soy autodidacta, me gusta trabajar en equipo, doy todo de mi para siempre estar en crecimiento junto ala
-            empresa que trabaje!
-            mi vida ha dado un giro total de 360 grados escogi el software como reto personal y cada vez siento mas amor
-            por él,estoy dispuesto a todos los retos que me pongan.
+        <p class="tituloInfo"> Conóceme!! </p>
+        <p class="infoinfo">Mi nombre es Santiago, vivo en Copacabana con mis padres, me considero una persona resiliente, con muchos valores como la puntualidad, el compañerismo, me gusta muchos escuchar a las personas, soy autodidacta, me gusta trabajar en equipo, doy todo de mi para siempre estar en crecimiento junto a la empresa que trabaje!
+        </p>
+        <br>
+        <br>
+        <p class="infoinfo">
+            Mi vida ha dado un giro de 180 grados, ya que mi profesión tenía un enfoque diferente. Escogí el software como reto personal y cada vez me siento más enamorado de esta profesión. Me gusta buscar el continuo creciemiento y estoy dispuesto a enfrentar todos los retos que se me presenten.
         </p>
     </div>
 
@@ -47,8 +46,8 @@
     </div>
 
     <div class="info">
-        <p class=" tituloSeccion"> contacto</p>
-        <p class="tituloInfo"> medios de contacto </p>
+        <p class=" tituloSeccion"> Contacto</p>
+        <p class="tituloInfo"> Medios de contacto </p>
         <p class="infoinfo">6013351 - 3107426456 - santiagobedoyaaamaya@gmail.com </p>
     </div>
 
@@ -57,17 +56,20 @@
         <p class="tituloInfo"> Estudios realizados </p>
         <p class="infoinfo"> - Bachillerato- Jose Miguel De Restrepo y Puerta </p>
         <p class="infoinfo"> - Actividad fisica - Sena </p>
-        <p class="infoinfo"> - Tecnologia en desarrollo de software - IU digital,ya habilitado para practicas </p>
+        <p class="infoinfo"> - Tecnologia en desarrollo de software - IU digital, ya habilitado para prácticas </p>
     </div>
 
     <div class="info">
         <p class=" tituloSeccion"> Experiencia y especializaciones</p>
-        <p class="tituloInfo"> trabajos,lenguajes y herramientas manejadas </p>
         <p class="infoinfo"> -Trabaje en bodytech, Animal x. En la parte de software trabaje en Nualtec (donde hacia la
             parte de soporte) </p>
-        <p class="infoinfo"> - me enfoco en el front end,js,html,css,mongodb,sql,Qa o testing en selenium.
     </div>
 
+    <div class="info">
+        <p class="tituloInfo"> Lenguajes y herramientas manejadas </p>
+        <p class="infoinfo"> - Me enfoco en front end,JS, HTML, CSS,Mongodb, SQL, QA o testing en Selenium.
+    </div>
+</main>
 
 </body>
 
